# minqlx-plugins

./: pyproject.toml
